# snow-x

./: AGENTS.md  CLAUDE.md  LICENSE  README.md
mofumofu-backend/: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  deploy_docker-compose.yml  docker-compose.dev.yml  docker-compose.yml
mofumofu-backend/markdown-service/: README.md  package.json
mofumofu-backend/markdown-service/src/: index.ts
mofumofu-backend/migration/src/: common.rs  lib.rs  m20250717_064916_users.rs  m20250718_155829_oauth_providers.rs  m20250718_155830_user_oauth_connections.rs  m20250718_162056_hashtags.rs  m20250718_162058_drafts.rs  m20250718_162101_post_hashtags.rs  m20250719_031841_follows.rs  m20250811_004802_target_types.rs  m20250815_103031_create_likes_table.rs  m20250820_061016_create_report_target_type_enum.rs  m20250820_061038_create_report_status_enum.rs  m20250820_061054_create_reports_table.rs  m20250912_000002_create_external_api_data.rs  m20250928_000000_create_tenants_table.rs  m20250928_000001_create_server_rooms_table.rs  m20250928_000002_create_racks_table.rs  m20250928_000003_create_ip_ranges_table.rs  m20250928_000005_create_devices_table.rs  m20250928_000006_create_device_ip_mappings_table.rs  m20250928_000007_create_device_library_table.rs  m20250928_000008_create_contacts_table.rs  m20251004_082913_alter_device_library_default_rack_size_nullable.rs  m20251004_084105_add_device_library_connections.rs  m20251007_000001_remove_contacts_tenant_id.rs  m20251007_114443_add_source_type_to_devices.rs  m20251007_120831_add_source_type_to_device_library.rs  m20251008_152821_create_custodian_policies.rs
mofumofu-backend/src/: main.rs  state.rs
mofumofu-backend/src/config/: db_config.rs
mofumofu-backend/src/connection/: http.rs  mod.rs  redis_connection.rs
mofumofu-backend/src/dto/: common.rs  mod.rs
mofumofu-backend/src/entity/: common.rs  contact_resource_mappings.rs  contacts.rs  custodian_executions.rs  custodian_policies.rs  device_library.rs  devices.rs  drafts.rs  hash_tags.rs  ip_addresses.rs  ip_ranges.rs  mod.rs  post_hash_tags.rs  posts.rs  prelude.rs  racks.rs  server_rooms.rs  system_events.rs  user_refresh_tokens.rs
mofumofu-backend/src/microservices/: admin_tasks_client.rs  email_client.rs  markdown_client.rs  mod.rs  search_client.rs  tasks.json
mofumofu-backend/src/middleware/: auth.rs  mod.rs
mofumofu-backend/src/repository/: mod.rs
mofumofu-backend/src/service/: custodian_service.rs  mod.rs
mofumofu-backend/src/utils/: crypto.rs  extract_ip_address.rs  image_processor.rs
mofumofu-backend/tasks/: .dockerignore  .env.example  README.md  pyproject.toml  start_beat.py
mofumofu-backend/tasks/app/: main.py  utils.py
snow-x-backend/migration/: Cargo.toml
snow-x-backend/migration/src/: lib.rs  m20250717_064915_user_roles.rs  m20250718_155828_user_refresh_tokens.rs  m20250718_162057_posts.rs  (+19 more)
(+1110 files in other folders)
