[package]
name = "mofumofu-backend"
version = "0.9.0"
description = "A soft and simple blogging platform for everyone."
authors = [
    "Levi Lim <shiueo.csh@gmail.com>",
]
edition = "2024"
rust-version = "1.88.0"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["multipart", "macros"] }
dotenvy = "0.15.7"
sea-orm = {version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-native-tls"]}
serde = {version = "1.0.219", features = ["derive"]}
tokio = {version = "1.47.1", features = ["full"]}
tracing = "0.1.41"
validator = {version = "0.20.0", features = ["derive"]}
tracing-subscriber = "0.3.19"
tower-http = { version = "0.6.6", features = ["cors", "auth", "compression-full"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "openapi_extensions", "time", "uuid", "chrono"]}
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "debug-embed"]}
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4"] }
cookie = "0.18.1"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
serde_json = "1.0.142"
tracing-appender = "0.2.3"
oauth2 = { version = "5.0.0", features = ["reqwest"] }
reqwest = { version = "0.12.23", features = ["json", "multipart"] }
aws-sdk-s3 = "1.103.0"
aws-config = { version = "1.8.5", features = ["behavior-version-latest"] }
meilisearch-sdk = "0.29.1"
redis = { version = "0.32.5", features = ["tokio-comp", "tokio-native-tls-comp", "connection-manager"] }
infer = "0.19.0"
sha2 = "0.10.9"
image = "0.25.6"
