[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
ammonia = "4.1.1"
async-std = { version = "1", features = ["attributes", "tokio1"] }
dotenvy = "0.15.7"
strum = { version = "0.27.2", features = ["derive"] }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
]
